Sync all content

--- a/content/resources/11-128s05.md
+++ b/content/resources/11-128s05.md
@@ -9,7 +9,8 @@ file_type: image/jpeg
 image_metadata:
   caption: "Photo of one of the first computers, the National Institute of Standards\
     \ and Technology (NIST) Standard Eastern Automatic Computer (SEAC). (Image courtesy\
-    \ of the\_[NIST](https://www.nist.gov/image-gallery).)"
+    \ of the\_{{% resource_link \"b6a35173-ff64-461d-a4be-54a3e15178fb\" \"NIST\"\
+    \ %}}.)"
   credit: ''
   image-alt: A photograph of two engineers sitting before a massive computer.
 learning_resource_types: []
