--- a/content/resources/11-128s05-th.md
+++ b/content/resources/11-128s05-th.md
@@ -4,11 +4,12 @@ description: ''
 file: /courses/11-128-information-technology-and-the-labor-market-spring-2005/a2549b3632d34f38632c8b81c86450bd_11-128s05-th.jpg
 file_size: 7312
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Photo of one of the first computers, the National Institute of Standards\
     \ and Technology (NIST) Standard Eastern Automatic Computer (SEAC). (Image courtesy\
-    \ of the\_{{% resource_link \"b6a35173-ff64-461d-a4be-54a3e15178fb\" \"NIST\"\
-    \ %}}.)"
+    \ of the\_[NIST](https://www.nist.gov/image-gallery).)"
   credit: ''
   image-alt: A photograph of two engineers sitting before a massive computer.
 learning_resource_types: []
