--- a/content/resources/11-128s05.md
+++ b/content/resources/11-128s05.md
@@ -6,11 +6,12 @@ description: Photo of one of the first computers, the National Institute of Stan
 file: /courses/11-128-information-technology-and-the-labor-market-spring-2005/78544b50ccd0a1eba04b4fd5c0de4985_11-128s05.jpg
 file_size: 64771
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Photo of one of the first computers, the National Institute of Standards\
     \ and Technology (NIST) Standard Eastern Automatic Computer (SEAC). (Image courtesy\
-    \ of the\_{{% resource_link \"b6a35173-ff64-461d-a4be-54a3e15178fb\" \"NIST\"\
-    \ %}}.)"
+    \ of the\_[NIST](https://www.nist.gov/image-gallery).)"
   credit: ''
   image-alt: A photograph of two engineers sitting before a massive computer.
 learning_resource_types: []
